[gd_scene load_steps=5 format=3 uid="uid://c4ld7cdixqjb1"]

[ext_resource type="Script" uid="uid://85d4w26vynpk" path="res://UI/settings.gd" id="1_vbc7n"]
[ext_resource type="Texture2D" uid="uid://bajkhkvd502xx" path="res://Assets/BG_DesertMountains/fondiu.jpg" id="2_wgjsl"]
[ext_resource type="FontFile" uid="uid://ckjnwdyjcuv2b" path="res://Fonts/PressStart2P-Regular.ttf" id="3_hnc8t"]
[ext_resource type="AudioStream" uid="uid://cu36dlelmoj0q" path="res://Music/Apotos (Day) - Sonic Unleashed [OST].mp3" id="4_hnc8t"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vbc7n")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_wgjsl")

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -224.0
offset_top = -128.0
offset_right = 224.0
offset_bottom = 144.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40

[node name="Musica" type="CheckButton" parent="TextureRect/VBoxContainer"]
layout_direction = 2
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_hnc8t")
theme_override_font_sizes/font_size = 40
text = "MÚSICA: ON"

[node name="Volumen" type="Label" parent="TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_hnc8t")
theme_override_font_sizes/font_size = 40
text = "VOLUMEN:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 30
alignment = 1

[node name="twenty_five" type="Button" parent="TextureRect/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_hnc8t")
theme_override_font_sizes/font_size = 23
text = "25%"

[node name="fifty" type="Button" parent="TextureRect/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_hnc8t")
theme_override_font_sizes/font_size = 23
text = "50%"

[node name="seventy_five" type="Button" parent="TextureRect/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_hnc8t")
theme_override_font_sizes/font_size = 23
text = "75%"

[node name="Volver" type="Button" parent="TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_hnc8t")
theme_override_font_sizes/font_size = 25
text = "VOLVER AL MENÚ"

[node name="Título" type="Label" parent="TextureRect"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 112.0
offset_bottom = 208.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.158946, 0, 0.970815, 1)
theme_override_colors/font_shadow_color = Color(0.00251271, 0.135233, 0.628602, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_fonts/font = ExtResource("3_hnc8t")
theme_override_font_sizes/font_size = 70
text = "-Opciones-"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_hnc8t")
volume_db = -30.0
autoplay = true

[connection signal="toggled" from="TextureRect/VBoxContainer/Musica" to="." method="_on_musica_toggled"]
[connection signal="pressed" from="TextureRect/VBoxContainer/HBoxContainer/twenty_five" to="." method="_on__pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/HBoxContainer/twenty_five" to="." method="_on_twenty_five_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/HBoxContainer/fifty" to="." method="_on_fifty_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/HBoxContainer/seventy_five" to="." method="_on_seventy_five_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/Volver" to="." method="_on_button_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/Volver" to="." method="_on_volver_pressed"]
